--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-simple-mocha": "^0.4.0",
     "mkdirp": "^0.5.0"
+  },
+  "dependencies": {
+    "bootstrap": "^3.3.2",
+    "jquery": "^2.1.3"
   }
 }
