--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-less": "^1.0.1",
     "grunt-simple-mocha": "^0.4.0",
     "mkdirp": "^0.5.0"
   },
