--- a/package.json
+++ b/package.json
@@ -17,19 +17,27 @@
   },
   "homepage": "https://github.com/jmvillaveces/jmvillaveces.github.io",
   "devDependencies": {
-    "browserify": "^6.3.3",
-    "clean": "^4.0.1",
-    "grunt": "^0.4.5",
-    "grunt-browserify": "^3.2.1",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-copy": "^0.7.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-less": "^1.0.1",
-    "grunt-simple-mocha": "^0.4.0",
-    "mkdirp": "^0.5.0"
+    "browserify": "^13.0.1",
+    "clean": "^4.0.2",
+    "grunt": "^1.0.1",
+    "grunt-browserify": "^5.0.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-less": "^1.3.0",
+    "grunt-http-server": "^2.0.0",
+    "http-server": "^0.9.0"
   },
   "dependencies": {
-    "bootstrap": "^3.3.2",
-    "jquery": "^2.1.3"
+    "bootstrap": "^3.3.6",
+    "browserify": "^13.0.1",
+    "clean": "^4.0.2",
+    "css-loading": "^1.4.0",
+    "d3": "^4.1.1",
+    "grunt": "^1.0.1",
+    "grunt-browserify": "^5.0.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-less": "^1.3.0",
+    "jquery": "^3.1.0"
   }
 }
